--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@
 
                         <p class="alert alert-danger hide" id="qrcode-msg-too-long" data-i18n="qrcode.msg-too-long">
                             Cannot create QR Code: Route definition is too long. Removing some waypoints may help fit
-                            all data into the QRCode.
+                            all data into the QR Code.
                         </p>
                         <p
                             class="alert alert-danger hide"
@@ -661,11 +661,11 @@
                             data-i18n="qrcode.msg-unknown-error"
                         >
                             Cannot create QR Code: An unknown error occurred. See the browser console for details. Maybe
-                            the route definition is too long. Removing some waypoints may help fit all data into the
-                            QRCode.
+                            the route definition is too long. Removing some waypoints may help fit all data into the QR
+                            Code.
                         </p>
-                        <div>
-                            <div class="pull-left mr-2"><small>QR Code Size:</small></div>
+                        <div id="qrcode-size-buttons">
+                            <div class="mt-2"><small>QR Code Size:</small></div>
                             <div
                                 id="qrcode-buttons"
                                 class="btn-group btn-group-xs"
